k8s/33-ingestair-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ingestair
  name: ingestair
  namespace: clair-berlin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingestair
  strategy: {}
  template:
    metadata:
      labels:
        app: ingestair
    spec:
      containers:
        - args:
            - python
            - manage.py
            - runserver
            - 0.0.0.0:8888
          image: clairberlin/managair:0.6.5
          name: ingestair-server
          resources: {}
          volumeMounts:
            - mountPath: "/var/secrets/ingestair-secret-key"
              name: ingestair-secret-key
              readOnly: true
            - mountPath: "/var/secrets/sentry-url"
              name: sentry-url
              readOnly: true
            - mountPath: "/var/secrets/sql-password"
              name: sql-password
              readOnly: true
            - mountPath: "/var/secrets/smtp-password"
              name: smtp-password
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: ingestair-secret-key
          secret:
            items:
              - key: ingestair-secret-key
                path: ingestair-secret-key
            secretName: ingestair-secret-key
        - name: sentry-url
          secret:
            items:
              - key: sentry-url
                path: sentry-url
            secretName: sentry-url
        - name: sql-password
          secret:
            items:
              - key: sql-password
                path: sql-password
            secretName: sql-password
        - name: smtp-password
          secret:
            items:
              - key: smtp-password
                path: smtp-password
            secretName: smtp-password
