k8s/43-managair-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: managair-server
  name: managair-server
  namespace: clair-berlin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: managair-server
  strategy: {}
  template:
    metadata:
      labels:
        app: managair-server
    spec:
      containers:
        - args:
            - python
            - manage.py
            - runserver
            - 0.0.0.0:8888
          image: clairberlin/managair:0.6.5
          name: managair-server
          resources: {}
          volumeMounts:
            - mountPath: "/var/secrets/managair-secret-key"
              name: managair-secret-key
              readOnly: true
            - mountPath: "/var/secrets/sentry-url"
              name: sentry-url
              readOnly: true
            - mountPath: "/var/secrets/sql-password"
              name: sql-password
              readOnly: true
            - mountPath: "/var/secrets/smtp-password"
              name: smtp-password
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: managair-secret-key
          secret:
            items:
              - key: managair-secret-key
                path: managair-secret-key
            secretName: managair-secret-key
        - name: sentry-url
          secret:
            items:
              - key: sentry-url
                path: sentry-url
            secretName: sentry-url
        - name: sql-password
          secret:
            items:
              - key: sql-password
                path: sql-password
            secretName: sql-password
        - name: smtp-password
          secret:
            items:
              - key: smtp-password
                path: smtp-password
            secretName: smtp-password
