k8s/22-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: clair-berlin
spec:
  selector:
    app: redis
  ports:
    - port: 6379
