k8s/32-ingestair-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingestair
  namespace: clair-berlin
spec:
  selector:
    app: ingestair
  ports:
    - port: 8888
