k8s/72-static-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-frontend
  namespace: clair-berlin
spec:
  selector:
    app: static-frontend
  ports:
    - port: 80
